--- a/test/index.html
+++ b/test/index.html
@@ -31,7 +31,6 @@
             transition: background 0.3s ease;
         }
 
-        /* HEADER & TABS */
         .header { padding: 30px 20px 10px; text-align: left; flex-shrink: 0; position: relative; }
         h1 { margin: 0; font-size: clamp(34px, 5vw, 55px); font-weight: 800; color: #1C1C1E; }
         .subtitle { font-size: clamp(17px, 2.5vw, 26px); margin-top: 5px; color: var(--accent); font-weight: 700; }
@@ -60,7 +59,6 @@
         .screen { display: none; flex-direction: column; height: 100%; overflow: hidden; }
         .screen.active { display: flex; }
 
-        /* MODAL */
         #customModal {
             display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(0,0,0,0.5); z-index: 10000; align-items: center; justify-content: center;
@@ -72,7 +70,6 @@
             border: 1px solid var(--border);
         }
 
-        /* CARDS */
         .card { 
             background: var(--card); border-radius: 18px; padding: clamp(20px, 3.5vw, 35px); 
             display: flex; align-items: center; justify-content: space-between; 
@@ -99,14 +96,12 @@
         .sp-name { font-size: 22px; flex: 1; color: var(--accent); font-weight: 600; text-transform: uppercase; }
         .sp-del { padding: 5px 10px; color: var(--red); font-weight: bold; font-size: 22px; cursor: pointer; }
 
-        /* PRESET BUTTONS */
         .selection-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; flex-shrink: 0; }
         .select-card { background: var(--card); border-radius: 14px; padding: 15px; text-align: center; border: 1px solid var(--border); cursor: pointer; }
         .select-card h4 { margin: 0; font-size: 22px; color: #1C1C1E; font-weight: 700; }
         .select-card p { margin: 2px 0 0; font-size: 16px; color: var(--subtext); }
         .select-card.selected { border: 3px solid var(--accent); background: #E8F2FF; }
 
-        /* TALLY GRID */
         .tally-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; padding: 10px 0; }
         .tally-btn {
             background: white; border: 1px solid var(--border); border-radius: 20px;
@@ -179,7 +174,7 @@
                 <div class="card-content"><h3>Start Tracking</h3><p>Count filler words & vocabulary</p></div>
                 <div style="font-size:40px; color:var(--accent)">✍</div>
             </button>
-            <button class="card" onclick="openModal('Ah-Counter', 'Report logic coming soon!', ()=>{})">
+            <button class="card" onclick="openModal('Ah-Counter', 'Ah-Counter report logic coming soon!', ()=>{})">
                 <div class="card-content"><h3>Counter Report</h3><p>View filler word totals</p></div>
                 <div style="font-size:35px; color:var(--accent)">📊</div>
             </button>
@@ -214,8 +209,9 @@
                 <div class="select-card" onclick="selectType(this, 60, 90, 120, 'TABLE TOPICS')"><h4>Table Topics</h4><p>1-2m</p></div>
                 <div class="select-card" onclick="selectType(this, 120, 150, 180, 'EVALUATION')"><h4>Evaluation</h4><p>2-3m</p></div>
                 <div class="select-card" onclick="selectType(this, 300, 360, 420, 'SPEECH')"><h4>Speech</h4><p>5-7m</p></div>
-                <div id="custom-card" class="select-card" style="grid-column: span 1;" onclick="askCustomTime(this)">
-                    <h4>Custom</h4><p id="customLabel">Manual</p>
+                <div class="select-card" onclick="selectType(this, 240, 300, 360, 'ICE BREAKER')"><h4>Ice Breaker</h4><p>4-6m</p></div>
+                <div id="custom-card" class="select-card" style="grid-column: span 2;" onclick="askCustomTime(this)">
+                    <h4>Custom</h4><p id="customLabel">Manual Entry</p>
                 </div>
             </div>
         </div>
@@ -305,6 +301,8 @@
         function showScreen(id) {
             document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
             document.getElementById(id).classList.add('active');
+            document.body.style.background = "var(--bg)";
+            document.body.style.color = "var(--text)";
             if (id === 'setup') {
                 document.getElementById('setupHeader').innerText = currentMode === 'timer' ? 'Speech Info' : 'Counter Setup';
                 document.getElementById('timerPresets').style.display = currentMode === 'timer' ? 'grid' : 'none';
@@ -412,7 +410,7 @@
             const logs = JSON.parse(localStorage.getItem(KEY_LOGS)||"[]");
             const text = (localStorage.getItem(KEY_CLUB) || "Meeting") + " Report:\n\n" + logs.join('\n');
             if (navigator.share) navigator.share({ title: 'Report', text: text });
-            else alert("Sharing not supported, but logs are saved!");
+            else alert("Logs are saved!");
         }
 
         function initApp() {
@@ -456,10 +454,10 @@
                 const v = document.getElementById('cInput').value; localStorage.setItem(KEY_CLUB, v); document.getElementById('clubSubtitle').innerText = v;
             });
         }
-        function askClearLogs() { openModal("Clear Data?", "Wipe all records?", () => { localStorage.removeItem(KEY_LOGS); location.reload(); }); }
+        function askClearLogs() { openModal("Clear Data?", "Wipe all meeting records?", () => { localStorage.removeItem(KEY_LOGS); location.reload(); }); }
         function handleNameInput(el) { el.value = el.value.toUpperCase(); filterSpeakers(); }
         function filterSpeakers() { const q = document.getElementById('name').value.toUpperCase(); renderSpeakerList(allSpeakers.filter(s => s.includes(q))); }
-        function togglePause() { if (state === "running") { clearInterval(iv); state="paused"; } else { start = Date.now() - (elapsed*1000); iv = setInterval(updateTimer, 1000); state="running"; } }
+        function togglePause() { if (state === "running") { clearInterval(iv); state="paused"; } else { start = Date.now() - (elapsed*1000); iv = setInterval(() => { elapsed = Math.floor((Date.now() - start) / 1000); let m = Math.floor(elapsed/60).toString().padStart(2,'0'), s = (elapsed%60).toString().padStart(2,'0'); document.getElementById('timer').innerText = `${m}:${s}`; if(elapsed >= lims.r) { document.body.style.background = "var(--red)"; document.body.style.color="white"; } else if(elapsed >= lims.y) { document.body.style.background = "var(--yellow)"; document.body.style.color="black"; } else if(elapsed >= lims.g) { document.body.style.background = "var(--green)"; document.body.style.color="white"; } }, 1000); state="running"; } }
         function exportRoster() { const blob = new Blob([JSON.stringify({speakers: allSpeakers})], {type:'application/json'}); const a = document.createElement('a'); a.href = URL.createObjectURL(blob); a.download = 'roster.json'; a.click(); }
         function handleImportFile(input) { const reader = new FileReader(); reader.onload = (e) => { const data = JSON.parse(e.target.result); localStorage.setItem(KEY_SPEAKERS, JSON.stringify(data.speakers)); location.reload(); }; reader.readAsText(input.files[0]); }
     </script>
