--- a/test/index.html
+++ b/test/index.html
@@ -10,27 +10,19 @@
     <link rel="apple-touch-icon" href="icon-timer.png">
     <style>
         :root {
-            --bg: #F2F2F7; 
-            --card: #FFFFFF;
-            --accent: #007AFF; 
-            --text: #000000;
-            --subtext: #3A3A3C;
-            --red: #FF3B30;
-            --green: #34C759;
-            --yellow: #FFCC00;
-            --gold: #BF941A;
-            --border: #D1D1D6;
+            --bg: #F2F2F7; --card: #FFFFFF; --accent: #007AFF; 
+            --text: #000000; --subtext: #3A3A3C; --red: #FF3B30;
+            --green: #34C759; --yellow: #FFCC00; --gold: #BF941A; --border: #D1D1D6;
         }
 
         body { 
             margin: 0; background: var(--bg); color: var(--text); 
             font-family: -apple-system, system-ui, sans-serif; display: flex; 
             flex-direction: column; height: 100dvh; 
-            padding-bottom: env(safe-area-inset-bottom);
-            box-sizing: border-box; overflow: hidden;
+            padding-bottom: env(safe-area-inset-bottom); box-sizing: border-box; overflow: hidden;
         }
 
-        /* 1. HEADER & TABS */
+        /* --- 1. HEADER & TABS --- */
         .header { padding: 30px 20px 10px; text-align: left; flex-shrink: 0; position: relative; }
         h1 { margin: 0; font-size: clamp(34px, 5vw, 55px); font-weight: 800; color: #1C1C1E; }
         .subtitle { font-size: clamp(17px, 2.5vw, 26px); margin-top: 5px; color: var(--accent); font-weight: 700; }
@@ -44,59 +36,59 @@
         .screen { display: none; flex-direction: column; height: 100%; overflow: hidden; }
         .screen.active { display: flex; }
 
-        /* 2. MAIN MENU BUTTONS (LARGE & BOLD) */
+        /* --- 2. MAIN MENU BUTTONS (THE FIX) --- */
         .main-menu-card { 
-            background: var(--card); border-radius: 20px; padding: 35px; 
-            display: flex; align-items: center; justify-content: space-between; 
+            background: var(--card); border-radius: 20px; 
+            display: grid; grid-template-columns: 1fr 60px; /* Lock icon to exactly 60px on the right */
+            align-items: center; padding: 30px 25px; 
             border: 1px solid var(--border); color: var(--text); text-align: left; 
             width: 100%; flex-shrink: 0; box-shadow: 0 4px 12px rgba(0,0,0,0.05); cursor: pointer;
+            box-sizing: border-box;
         }
+        .main-menu-card .card-content { pointer-events: none; }
         .main-menu-card h3 { margin: 0; font-size: 30px; font-weight: 800; }
         .main-menu-card p { margin: 6px 0 0; font-size: 19px; color: var(--subtext); }
-        .main-menu-card .icon { font-size: 40px; color: var(--accent); flex-shrink: 0; margin-left: 15px; }
+        .main-menu-card .icon { font-size: 45px; color: var(--accent); text-align: right; pointer-events: none; }
 
-        /* 3. SETUP SCREEN - ROSTER AREA */
+        /* --- 3. SETUP SCREEN - ROSTER --- */
         .speaker-area { background: var(--card); border-radius: 16px; padding: 2px; flex: 1; overflow-y: auto; border: 1px solid var(--border); min-height: 100px; margin-bottom: 10px; }
         .speaker-item { padding: 12px 18px; border-bottom: 1px solid var(--bg); display: flex; justify-content: space-between; align-items: center; }
         .sp-name { font-size: 22px; flex: 1; color: var(--accent); font-weight: 600; text-transform: uppercase; }
         .sp-del { padding: 5px 10px; color: var(--red); font-weight: bold; font-size: 22px; cursor: pointer; }
         input { background: var(--card); border: 2px solid var(--border); color: var(--text); padding: 15px; border-radius: 14px; font-size: 22px; outline: none; width: 100%; box-sizing: border-box; }
 
-        /* 4. SETUP SCREEN - ROLE SELECT BUTTONS (COMPRESSED) */
-        .role-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 8px; flex-shrink: 0; padding-bottom: 10px; }
+        /* --- 4. SETUP SCREEN - ROLES (STILL COMPRESSED) --- */
+        .role-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px; flex-shrink: 0; padding-bottom: 10px; }
         @media (min-width: 650px) { .role-grid { grid-template-columns: repeat(3, 1fr); } }
-        .role-card { background: var(--card); border-radius: 12px; padding: 8px; text-align: center; border: 1px solid var(--border); cursor: pointer; min-height: 50px; display: flex; flex-direction: column; justify-content: center; }
-        .role-card h4 { margin: 0; font-size: 15px; color: #1C1C1E; font-weight: 700; line-height: 1.1; }
-        .role-card p { margin: 2px 0 0; font-size: 11px; color: var(--subtext); }
+        .role-card { background: var(--card); border-radius: 12px; padding: 10px; text-align: center; border: 1px solid var(--border); cursor: pointer; min-height: 55px; display: flex; flex-direction: column; justify-content: center; }
+        .role-card h4 { margin: 0; font-size: 16px; color: #1C1C1E; font-weight: 700; line-height: 1.1; }
+        .role-card p { margin: 2px 0 0; font-size: 12px; color: var(--subtext); }
         .role-card.selected { border: 3px solid var(--accent); background: #E8F2FF; }
 
-        /* 5. FILLER TALLY SCREEN - TALLY BUTTONS (TIGHTENED) */
-        .tally-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 15px; padding: 15px 0; }
+        /* --- 5. FILLER TALLY SCREEN (STILL TIGHT) --- */
+        .tally-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; padding: 15px 0; }
         @media (min-width: 650px) { .tally-grid { grid-template-columns: repeat(3, 1fr); } }
         .tally-card { 
-            background: var(--card); border: 1px solid var(--border); border-radius: 20px; 
+            background: var(--card); border: 1px solid var(--border); border-radius: 22px; 
             display: flex; flex-direction: column; align-items: center; justify-content: center; 
-            padding: 15px 5px; box-shadow: 0 4px 10px rgba(0,0,0,0.06); position: relative; 
-            min-height: 100px;
+            padding: 20px 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.06); position: relative; min-height: 110px;
         }
-        .tally-card .count { font-size: 42px; font-weight: 800; color: var(--accent); line-height: 1; pointer-events: none; }
-        .tally-card .label { font-size: 14px; font-weight: 700; color: var(--subtext); text-transform: uppercase; margin-top: 5px; pointer-events: none; }
-        
-        /* CORNER ICONS (SQUARE-ROUNDED) */
-        .tally-del { position: absolute; bottom: 6px; left: 6px; width: 32px; height: 32px; background: var(--red); color: white; border-radius: 8px; display: flex; align-items: center; justify-content: center; font-size: 14px; font-weight: 900; z-index: 10; cursor: pointer; }
-        .tally-minus { position: absolute; bottom: 6px; right: 6px; width: 32px; height: 32px; background: #8E8E93; color: white; border-radius: 8px; display: flex; align-items: center; justify-content: center; font-size: 24px; font-weight: 700; z-index: 10; cursor: pointer; }
-        .wod-card { border: 3px solid var(--gold); }
+        .tally-card .count { font-size: 48px; font-weight: 800; color: var(--accent); line-height: 1; }
+        .tally-card .label { font-size: 16px; font-weight: 700; color: var(--subtext); text-transform: uppercase; margin-top: 5px; }
+        .tally-del { position: absolute; bottom: 8px; left: 8px; width: 38px; height: 38px; background: var(--red); color: white; border-radius: 12px; display: flex; align-items: center; justify-content: center; font-size: 18px; font-weight: 900; z-index: 10; box-shadow: 0 2px 6px rgba(0,0,0,0.15); cursor: pointer; }
+        .tally-minus { position: absolute; bottom: 8px; right: 8px; width: 38px; height: 38px; background: #8E8E93; color: white; border-radius: 12px; display: flex; align-items: center; justify-content: center; font-size: 32px; font-weight: 700; z-index: 10; box-shadow: 0 2px 6px rgba(0,0,0,0.15); cursor: pointer; }
+        .wod-card { border: 4px solid var(--gold); }
         .wod-card .count { color: var(--gold); }
 
-        /* FOOTERS & MODALS */
+        /* --- FOOTERS & MODALS --- */
         .button-row { display: flex; gap: 15px; padding: 10px 20px 20px; flex-shrink: 0; background: transparent; max-width: 950px; margin: 0 auto; width: 100%; box-sizing: border-box; }
         .footer-btn { flex: 1; padding: 22px; border-radius: 18px; font-size: 24px; font-weight: 700; border: none; background: var(--accent); color: white; }
         .secondary-btn { background: #E5E5EA; color: #000000; border: 1px solid var(--border); }
-        .commit-btn { background: var(--green); color: white; }
         .credit-footer { text-align: center; padding: 25px; border-top: 1px solid var(--border); flex-shrink: 0; background: var(--card); }
         .resource-row { display: flex; gap: 12px; margin-bottom: 15px; justify-content: center; }
         .res-btn { flex: 1; background: #F2F2F7; color: var(--accent); text-decoration: none; padding: 14px; border-radius: 12px; font-weight: 700; font-size: 17px; border: 1px solid var(--border); }
         #customModal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); z-index: 10000; align-items: center; justify-content: center; backdrop-filter: blur(8px); }
+        .modal-content { background: var(--card); width: 85%; max-width: 500px; padding: 25px; border-radius: 24px; text-align: center; box-shadow: 0 10px 30px rgba(0,0,0,0.2); border: 1px solid var(--border); }
         #timer { font-size: clamp(100px, 35vw, 450px); font-weight: 200; text-align: center; margin: auto 0; font-variant-numeric: tabular-nums; color: #000; }
         #reportLog { background: var(--card); border-radius: 18px; padding: 25px; flex: 1; overflow-y: auto; font-family: monospace; font-size: 22px; border: 1px solid var(--border); color: #000; white-space: pre-wrap; }
     </style>
@@ -136,8 +128,8 @@
         </div>
         <div class="container" style="flex:0; margin-top: 10px;">
             <div class="main-menu-card" onclick="askClearLogs()" style="background: #FFF5F5; border: 2px solid var(--red); padding: 20px;">
-                <div class="card-content" style="text-align:center;"><h3 style="color:var(--red); margin:0;">CLEAR MEETING DATA</h3></div>
-            </div>
+                <div class="card-content" style="text-align:center;"><h3 style="color:var(--red); font-weight:800; margin:0;">CLEAR MEETING DATA</h3></div>
+                <div></div> </div>
         </div>
         <div class="credit-footer"><div class="resource-row"><a href="https://bit.ly/m/SDTM" target="_blank" class="res-btn">Website ↗</a><a href="manual.html" class="res-btn">Manual ↗</a></div><p style="margin:0; font-weight:700; font-size:15px;">Southern Dutchess Toastmasters</p></div>
     </div>
@@ -173,11 +165,7 @@
         <div class="button-row"><button class="footer-btn" onclick="showScreen('menu')">Done</button></div>
     </div>
 
-    <div id="report" class="screen">
-        <div class="header"><h1 id="reportPageTitle">Report</h1></div>
-        <div class="container"><div id="reportLog"></div></div>
-        <div class="button-row"><button class="footer-btn secondary-btn" onclick="shareReport()">Share</button><button class="footer-btn" onclick="showScreen('menu')">Done</button></div>
-    </div>
+    <div id="report" class="screen"><div class="header"><h1 id="reportPageTitle">Report</h1></div><div class="container"><div id="reportLog"></div></div><div class="button-row"><button class="footer-btn secondary-btn" onclick="shareReport()">Share</button><button class="footer-btn" onclick="showScreen('menu')">Done</button></div></div>
 
     <script>
         const prefix = window.location.pathname.toLowerCase().includes('/test/') ? 'test_' : 'prod_';
@@ -203,7 +191,6 @@
         function showScreen(id) {
             document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
             document.getElementById(id).classList.add('active');
-            document.body.style.background = "var(--bg)"; document.body.style.color = "var(--text)";
             if (id === 'setup') renderSetupGrid();
             if (id === 'report') loadReport();
         }
@@ -229,7 +216,7 @@
         function handleStart() {
             const name = document.getElementById('name').value.trim().toUpperCase();
             if (!name) { openModal("Missing Name", "Please select a speaker.", ()=>{}); return; }
-            if (!selectedTypeLabel) { openModal("Missing Role", "Please select a speech type or role.", ()=>{}); return; }
+            if (!selectedTypeLabel) { openModal("Missing Role", "Please select a role.", ()=>{}); return; }
             currentSpeaker = name;
             if (currentMode === 'timer') { showScreen('timerDisplay'); document.getElementById('spkName').innerText = name; startTimer(); }
             else { showScreen('counterDisplay'); document.getElementById('counterSpeakerName').innerText = name; document.getElementById('counterSpeakerRole').innerText = selectedTypeLabel; initTally(); }
@@ -239,13 +226,7 @@
         function renderTally() {
             const area = document.getElementById('tallyArea');
             const sorted = [...fillerList].sort((a,b) => a === "WORD OF DAY" ? -1 : b === "WORD OF DAY" ? 1 : a.localeCompare(b));
-            area.innerHTML = sorted.map(f => `
-                <div class="tally-card ${f === 'WORD OF DAY' ? 'wod-card' : ''}" onclick="incTally('${f}')">
-                    <div class="tally-del" onclick="delFiller(event, '${f}')">✕</div>
-                    <div class="count" id="ct-${f}">${currentTally[f]}</div>
-                    <div class="label">${f}</div>
-                    <div class="tally-minus" onclick="decTally(event, '${f}')">−</div>
-                </div>`).join('');
+            area.innerHTML = sorted.map(f => `<div class="tally-card ${f === 'WORD OF DAY' ? 'wod-card' : ''}" onclick="incTally('${f}')"><div class="tally-del" onclick="delFiller(event, '${f}')">✕</div><div class="count" id="ct-${f}">${currentTally[f]}</div><div class="label">${f}</div><div class="tally-minus" onclick="decTally(event, '${f}')">−</div></div>`).join('');
         }
 
         function incTally(f) { currentTally[f]++; document.getElementById(`ct-${f}`).innerText = currentTally[f]; }
@@ -279,7 +260,7 @@
         function askCustomTime(el) {
             const saved = JSON.parse(localStorage.getItem(KEY_CUSTOM) || '{"g":5,"cy":6,"r":7}');
             const title = currentMode === 'timer' ? "Custom Thresholds" : "Enter Custom Role";
-            const body = currentMode === 'timer' ? `<div style="display:grid; gap:10px;"><label>Green: <input type="number" id="cg" value="${saved.g}"></label><label>Yellow: <input type="number" id="cy" value="${saved.cy}"></label><label>Red: <input type="number" id="cr" value="${saved.r}"></label></div>` : `<input type="text" id="customRole" placeholder="e.g. JOKE MASTER" style="text-transform:uppercase">`;
+            const body = currentMode === 'timer' ? `<div style="display:grid; gap:10px;"><label>Min: <input type="number" id="cg" value="${saved.g}"></label><label>Target: <input type="number" id="cy" value="${saved.cy}"></label><label>Max: <input type="number" id="cr" value="${saved.r}"></label></div>` : `<input type="text" id="customRole" placeholder="e.g. JOKE MASTER" style="text-transform:uppercase">`;
             openModal(title, body, () => {
                 if (currentMode === 'timer') {
                     const g = document.getElementById('cg').value, y = document.getElementById('cy').value, r = document.getElementById('cr').value;
